# schwagent

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  enroll.py  pyproject.toml  run.sh
docs/: multi-leg-execution-plan.md  schwab-api-reference.md
src/schwabagent/: autoresearch.py  backtest.py  backtest_validation.py  breadth.py  brown_indicators.py  cli.py  config.py  dreamcycle.py  feedback.py  fundamentals.py  hilo.py  indicators.py  intermarket.py  llm.py  options.py  order_tracker.py  persistence.py  pf.py  portfolio_optimizer.py  rate_limiter.py  risk.py  runner.py  scheduler.py  schwab_client.py  sec.py  skills.py  streaming.py  ta_indicators.py  telegram.py  trading_rules.py
src/schwabagent/intelligence/: __init__.py  skills.py
src/schwabagent/scrapers/: __init__.py  dividend_calendar.py  earnings_calendar.py  quant_research.py  splits_calendar.py  upgrades_downgrades.py
src/schwabagent/strategies/: TEMPLATE.py  __init__.py  ah_sniper.py  base.py  brown_momentum.py  composite.py  conviction_hold.py  covered_call_screener.py  etf_rotation.py  etf_scalp.py  (+7 more)
tests/: test_analysis.py  test_backtest_validation.py  test_breadth.py  test_brown_indicators.py  test_buy_write.py  test_config.py  test_covered_call.py  test_filters.py  test_indicators.py  test_intelligence_skills.py  test_intelligence_swarm.py  test_intermarket.py  test_iron_condor.py  test_options.py  test_portfolio_optimizer.py  test_quant_research.py  test_risk.py  test_scrapers.py  test_strategies.py  test_ta_indicators.py  test_telegram_approval.py  test_trading.py  test_verticals.py
(+13 files in other folders)
